# restaurant-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PROGRESS.md  QUICKSTART.md  README.md  pyproject.toml
a2a/: agent_card.py  client.py  server.py
a2a/agents/: cuisine_expert.py  dietary_expert.py
api/: main.py
api/middleware/: tenant.py
api/routes/: chat.py  health.py  menu.py  tenants.py
core/agent/: graph.py  nodes.py  state.py
core/db/: init.py  seed.py  session.py
core/guardrails/: pipeline.py
core/models/: menu.py  preference.py  session.py  tenant.py
core/preferences/: profile.py
core/tools/: base.py  dish_recommender.py  menu_fetcher.py  review_retrieval.py
docker/: Dockerfile  docker-compose.yml
docker/k8s/: deployment.yaml  namespace.yaml
docs/: WORKFLOW.md
docs/adr/: 001-chromadb-over-pinecone.md
evaluation/: models.py  pipeline.py
evaluation/golden/: golden_dataset.json
mcp/: server.py
rag/pipeline/: __init__.py  chunker.py  embeddings.py  ingest.py
rag/retrieval/: __init__.py  engine.py
rag/scraper/: __init__.py  google_places.py
sessions/: manager.py
tests/: conftest.py
tests/integration/: test_a2a_server.py  test_agent_conversation.py  test_chromadb_ingestion.py  test_google_places_integration.py  test_menu_tool.py  test_review_tool.py  test_tenant_middleware.py
tests/unit/: test_google_places.py  test_guardrails.py  test_menu_queries.py  test_preference_extraction.py  test_preference_model.py  test_rag_chunker.py  test_retrieval_engine.py  test_session_manager.py
widget/: widget.js
